# ruler-systems

./: README.md
JStepwise/: .project
JStepwise/src/stepwise/: Attr.java  BacktrackException.java  BinMerge.java  Coroutine.java  CoroutineBase.java  Merge.java  Node.java  Parents.java  Report.java  ReportChild.java  ReportDone.java  ReportFail.java  ReportInfo.java  ReportReplace.java  Rule.java  Stepwise.java
JStepwise/src/test/: ChooseOr.java  Info.java  InfoWork.java  Main.java  Pred.java  PredConst.java  PredInh.java  PredLet.java  PredOr.java  PredSyn.java  PredVar.java
nested-ag/: nested-ag.cabal  uuagc_options
nested-ag/examples/: Example.ag
nested-ag/src/: BackendAg.ag  Main.hs  Opts.hs  Parser.hs  Scanner.x  Transform.ag
ruler-ag/: ruler-ag.cabal  uuagc_options
ruler-ag/examples/: Example.ag
ruler-ag/src/: BackendAg.ag  BackendAst.ag  CommonTypes.hs  Main.hs  Opts.hs  Parser.hs  Scanner.x  Transform.ag
ruler-core/: README  Setup.hs  ruler-core.cabal  uuagc_options
ruler-core/examples/: Alias.rul  ConMatch.rul  CycRepmin.rul  Eval.rul  EvalAsAg.rul  HelloWorld.rul  Internal.rul  JsMenu.rul  RenameAttr.rul  Repmin.rul  Sum.rul
ruler-core/src/: Ast.ag  AstAG.ag  Common.hs  DepAnalysis.hs  Env.hs  Errs.ag  Main.hs  Opts.hs  Parser.hs  Pretty.hs  PrettyAst.ag  Scanner.x  TargetGraph.ag  TargetHaskell.ag  TargetJs.ag  Transform.ag
ruler-initial/: Example.txt  Example2.txt  ExampleHM.rul  ExamplePre.txt  ExamplePre2.txt  Makefile.in  README  Ruler.cabal
ruler-initial/brazil/workplan/: project.tex
ruler-initial/defer-generic/: Makefile  defer-generic.lhs
ruler-initial/delay-experiment/: Experiment.ag  Experiment.hs  Makefile
ruler-initial/fph-extension/: extension.tex
ruler-initial/hw-2009/: Makefile  paper.lhs  paper.tex  references.bib
ruler-initial/old-stuff/: 2ruler.txt  ruler.txt
ruler-initial/progress-report/: Makefile  progress.bib  progress.tex
ruler-initial/ruler-interpreter/: Makefile.in  configure.ac  gendeps.sh
ruler-initial/ruler-interpreter/examples/: helloworld.rul  hm.rul  test2.exp  util.rul
ruler-initial/ruler-interpreter/src/: Dot.hs  Externals.hs  GenExternals.hs  Ruler.hs  RulerExpr.ag  RulesExpr.ag  SyntaxExt.hs  Util.hs
ruler-initial/rules-transactions/: transactions.tex
ruler-initial/semantics/: Semantics.hs  semantics.tex
ruler-initial/src/: Ruler.hs
ruler-initial/src/Base/: AST.ag  Base.ag  FlexScanner.x  Main.ag  Parser.hs  PhaseCompileJudgements.ag  PhaseStaticChecksInitial.ag  PhaseStaticChecksPreTyping.ag  PhaseStaticChecksTyping.ag  Scanner.x  Transform.ag
ruler-initial/src/Core/: AST.ag  Core.ag  Pretty.ag  StaticChecks.ag
ruler-initial/src/Util/: Common.hs  Merge.hs  Options.hs
ruler-initial/src/Util/Error/: AST.ag  Err.ag  Pretty.ag
ruler-initial/src/Util/Expr/: AST.ag  WithTypeAST.ag
ruler-initial/src/Util/Format/: AST.ag  Format.ag  Pretty.ag
ruler-initial/src/Util/Grammar/: AST.ag  Compile.ag  Grammar.ag  LeftCorner.hs  LeftFactor.hs
ruler-initial/src/Util/NameAnalysis/: AST.ag  Analysis.ag  NameTree.ag
ruler-initial/src/Util/Parsing/: Parser.hs  Support.hs  Token.hs
ruler-initial/src/Util/Pattern/: AST.ag  Pattern.ag
ruler-interpreter/: Makefile.in  bugs.txt  gendeps.sh  ruler-interpreter.cabal  todo.txt
ruler-interpreter/examples/: arith.rul  copyrules.rul  damasmilner.rul  dict.rul  helloworld.rul  hm.rul  inherit.rul  list.rul  mono.rul  repmin.rul  test.arith  test.exp
ruler-interpreter/src/: Dot.hs  Externals.hs  GenExternals.hs  LambdaExpr.ag  Opts.hs  Parser.hs  Ruler.hs  RulerExpr.ag  RulesExpr.ag  Scanner.x  SyntaxExt.hs  Util.hs
stepwise/: bsd2.txt  stepwise.cabal
stepwise/old/: Cata.hs
stepwise/old/Data/BreadthFirst/: Cata.hs
stepwise/src/: Benchmarks.hs
stepwise/src/Control/Monad/: Stepwise.hs
stepwise/src/Control/Monad/Stepwise/: AG.hs  Core.hs  CorePure.hs  Derived.hs  Examples.hs  Proofs.hs  Unsafe.hs
visits-ag/: README  uuagc_options  visits-ag.cabal
visits-ag/examples/: con-decompose-pat.ag  cycle.ag  defuse.ag  trivial.ag  types.ag
visits-ag/src/: Common.hs  Desugar.ag  Error.ag  ErrorAst.ag  Flat.ag  FlatAst.ag  Flatten.ag  Front.ag  FrontAst.ag  Main.hs  Merger.hs  Opts.hs  Parser.hs  PrettyFlat.ag  PrettyFront.ag  PrettySimple.ag  Scanner.x  Simple.ag  SimpleAst.ag  SymbolTable.hs  Type.ag  TypeAst.ag
