cabal-version: >=1.2
build-type: Simple
name: nestedag
version: 0.1
license: LGPL
maintainer: Arie Middelkoop <ariem@cs.uu.nl>
homepage: http://www.cs.uu.nl/wiki/HUT/WebHome
description: Nested Attribute Grammar System
category: Development
stability: Experimental
copyright: Arie Middelkoop

executable nestedag
  build-depends: base >= 4, base < 5, containers, pretty, uulib, array, mtl, haskell-src, filepath, bytestring, uuagc>=0.9.12
  build-depends: haskell98
  main-is: Main.hs
  hs-source-dirs: src
  other-modules:
    Scanner, Parser, BackendAst, CommonTypes, Opts, Transform
